Add first sections

--- a/greenlight/index.html
+++ b/greenlight/index.html
@@ -10,8 +10,25 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-
 				<section data-markdown="slides/intro.md"></section>
+				<section>
+					<section data-markdown="slides/case/section.md"></section>
+					<section data-markdown="slides/case/recruitment.md"></section>
+					<section data-markdown="slides/case/consultancy.md"></section>
+					<section data-markdown="slides/case/cases.md"></section>
+					<section data-markdown="slides/case/quote.md"></section>
+				</section>
+				<section>
+						<section data-markdown="slides/scenario/section.md"></section>
+					</section>
+				<section>
+					<section data-markdown="slides/context/section.md"></section>
+					<section data-markdown="slides/context/overview.md"></section>
+					<section data-markdown="slides/context/state.md"></section>
+					<section data-markdown="slides/context/similar.md"></section>
+					<section data-markdown="slides/context/immersive.md"></section>
+					<section data-markdown="slides/context/hardware.md"></section>
+				</section>
 			</div>
 		</div>
 		<script src="lib/js/head.min.js"></script>
