Add research sections

--- a/greenlight/index.html
+++ b/greenlight/index.html
@@ -11,16 +11,33 @@
 		<div class="reveal">
 			<div class="slides">
 				<section data-markdown="slides/intro.md"></section>
+				<section data-markdown="slides/question.md"></section>
 				<section>
-					<section data-markdown="slides/case/section.md"></section>
-					<section data-markdown="slides/case/recruitment.md"></section>
-					<section data-markdown="slides/case/consultancy.md"></section>
-					<section data-markdown="slides/case/cases.md"></section>
-					<section data-markdown="slides/case/quote.md"></section>
+					<section data-markdown="slides/scenario/section.md"></section>
+					<section data-markdown="slides/scenario/process.md"></section>
+					<section data-markdown="slides/scenario/caroussel.md"></section>
+					<section data-markdown="slides/scenario/results.md"></section>
+					<section data-markdown="slides/scenario/impression.md"></section>
 				</section>
 				<section>
-						<section data-markdown="slides/scenario/section.md"></section>
-					</section>
+					<section data-markdown="slides/group/section.md"></section>
+					<section data-markdown="slides/group/definition.md"></section>
+					<section data-markdown="slides/group/persona.md"></section>
+					<section data-markdown="slides/group/competentions.md"></section>
+				</section>
+				<section>
+					<section data-markdown="slides/stakeholders/section.md"></section>
+					<section data-markdown="slides/stakeholders/schema.md"></section>
+					<section data-markdown="slides/stakeholders/stakeholders.md"></section>
+				</section>
+				<section>
+					 <section data-markdown="slides/concept/section.md"></section>
+					 <section data-markdown="slides/concept/individual.md"></section>
+					 <section data-markdown="slides/concept/group.md"></section>
+					 <section data-markdown="slides/concept/skills.md"></section>
+					 <section data-markdown="slides/concept/inspiration-1.md"></section>
+					 <section data-markdown="slides/concept/inspiration-2.md"></section>
+				</section>
 				<section>
 					<section data-markdown="slides/context/section.md"></section>
 					<section data-markdown="slides/context/overview.md"></section>
