Add concept slides

--- a/greenlight/index.html
+++ b/greenlight/index.html
@@ -31,21 +31,37 @@
 					<section data-markdown="slides/stakeholders/stakeholders.md"></section>
 				</section>
 				<section>
-					 <section data-markdown="slides/concept/section.md"></section>
-					 <section data-markdown="slides/concept/individual.md"></section>
-					 <section data-markdown="slides/concept/group.md"></section>
-					 <section data-markdown="slides/concept/skills.md"></section>
-					 <section data-markdown="slides/concept/inspiration-1.md"></section>
-					 <section data-markdown="slides/concept/inspiration-2.md"></section>
+					 <section data-markdown="slides/ideas/section.md"></section>
+					 <section data-markdown="slides/ideas/individual.md"></section>
+					 <section data-markdown="slides/ideas/group.md"></section>
+					 <section data-markdown="slides/ideas/skills.md"></section>
+					 <section data-markdown="slides/ideas/inspiration-1.md"></section>
+					 <section data-markdown="slides/ideas/inspiration-2.md"></section>
+					 <section data-markdown="slides/ideas/concepts.md"></section>
 				</section>
 				<section>
-					<section data-markdown="slides/context/section.md"></section>
-					<section data-markdown="slides/context/overview.md"></section>
-					<section data-markdown="slides/context/state.md"></section>
-					<section data-markdown="slides/context/similar.md"></section>
-					<section data-markdown="slides/context/immersive.md"></section>
-					<section data-markdown="slides/context/hardware.md"></section>
-				</section>
+						<section data-markdown="slides/vr/section.md"></section>
+						<section data-markdown="slides/vr/overview.md"></section>
+						<section data-markdown="slides/vr/state.md"></section>
+						<section data-markdown="slides/vr/similar.md"></section>
+						<section data-markdown="slides/vr/immersive.md"></section>
+						<section data-markdown="slides/vr/hardware.md"></section>
+				 </section>
+				 <section>
+						<section data-markdown="slides/prototypes/section.md"></section>
+						<section data-markdown="slides/prototypes/github.md"></section>
+						<section data-markdown="slides/prototypes/hardware.md"></section>
+						<section data-markdown="slides/prototypes/webvr-1.md"></section>
+						<section data-markdown="slides/prototypes/webvr-2.md"></section>
+						<section data-markdown="slides/prototypes/meerwaarde.md"></section>
+						<section data-markdown="slides/prototypes/prototype-1.md"></section>
+						<section data-markdown="slides/prototypes/prototype-2.md"></section>
+				 </section>
+				 <section>
+						<section data-markdown="slides/planning/section.md"></section>
+						<section data-markdown="slides/planning/iteration.md"></section>
+						<section data-markdown="slides/planning/vision.md"></section>
+				 </section>
 			</div>
 		</div>
 		<script src="lib/js/head.min.js"></script>
