--- a/greenlight/index.html
+++ b/greenlight/index.html
@@ -16,6 +16,7 @@
 					<section data-markdown="slides/scenario/section.md"></section>
 					<section data-markdown="slides/scenario/process.md"></section>
 					<section data-markdown="slides/scenario/caroussel.md"></section>
+					<section data-markdown="slides/scenario/cases.md"></section>
 					<section data-markdown="slides/scenario/results.md"></section>
 					<section data-markdown="slides/scenario/impression.md"></section>
 				</section>
@@ -29,6 +30,7 @@
 					<section data-markdown="slides/stakeholders/section.md"></section>
 					<section data-markdown="slides/stakeholders/schema.md"></section>
 					<section data-markdown="slides/stakeholders/stakeholders.md"></section>
+					<section data-markdown="slides/stakeholders/contact.md"></section>
 				</section>
 				<section>
 					 <section data-markdown="slides/ideas/section.md"></section>
@@ -37,7 +39,8 @@
 					 <section data-markdown="slides/ideas/skills.md"></section>
 					 <section data-markdown="slides/ideas/inspiration-1.md"></section>
 					 <section data-markdown="slides/ideas/inspiration-2.md"></section>
-					 <section data-markdown="slides/ideas/concepts.md"></section>
+					 <section data-markdown="slides/ideas/concept-1.md"></section>
+					 <section data-markdown="slides/ideas/concept-2.md"></section>
 				</section>
 				<section>
 						<section data-markdown="slides/vr/section.md"></section>
