--- a/final/index.html
+++ b/final/index.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<title>&Samhoud Showcase</title>
+		<title>Afstudeerproject &samhoud</title>
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/samhoud.css">
 		<link rel="stylesheet" href="css/mono-blue.css">
@@ -12,13 +12,17 @@
 			<div class="slides">
 				<section data-markdown="slides/intro.md"></section>
 				<section data-markdown="slides/question.md"></section>
+				<section data-markdown="slides/duction.md"></section>
 				<section>
 					<section data-markdown="slides/scenario/section.md"></section>
 					<section data-markdown="slides/scenario/process.md"></section>
 					<section data-markdown="slides/scenario/caroussel.md"></section>
-					<section data-markdown="slides/scenario/cases.md"></section>
-					<section data-markdown="slides/scenario/results.md"></section>
 					<section data-markdown="slides/scenario/impression.md"></section>
+					<section data-markdown="slides/scenario/cases.md"></section>
+					<section data-markdown="slides/scenario/cases-2.md"></section>
+					<section data-markdown="slides/scenario/cases-3.md"></section>
+					<section data-markdown="slides/scenario/problem.md"></section>
+					<section data-markdown="slides/scenario/results.md"></section>
 				</section>
 				<section>
 					<section data-markdown="slides/group/section.md"></section>
