Update focus group

--- a/final/index.html
+++ b/final/index.html
@@ -28,7 +28,7 @@
 					<section data-markdown="slides/group/section.md"></section>
 					<section data-markdown="slides/group/definition.md"></section>
 					<section data-markdown="slides/group/persona.md"></section>
-					<section data-markdown="slides/group/competentions.md"></section>
+					<section data-markdown="slides/group/audience.md"></section>
 				</section>
 				<section>
 					<section data-markdown="slides/stakeholders/section.md"></section>
