Add focus section

--- a/final/index.html
+++ b/final/index.html
@@ -34,25 +34,21 @@
 					<section data-markdown="slides/stakeholders/section.md"></section>
 					<section data-markdown="slides/stakeholders/schema.md"></section>
 					<section data-markdown="slides/stakeholders/stakeholders.md"></section>
-					<section data-markdown="slides/stakeholders/contact.md"></section>
 				</section>
 				<section>
 					 <section data-markdown="slides/ideas/section.md"></section>
-					 <section data-markdown="slides/ideas/individual.md"></section>
-					 <section data-markdown="slides/ideas/group.md"></section>
-					 <section data-markdown="slides/ideas/skills.md"></section>
-					 <section data-markdown="slides/ideas/inspiration-1.md"></section>
+					 <section data-markdown="slides/ideas/team.md"></section>
+					 <section data-markdown="slides/ideas/gamification.md"></section>
+					 <section data-markdown="slides/ideas/communication.md"></section>
+					 <section data-markdown="slides/ideas/inspiration.md"></section>
 					 <section data-markdown="slides/ideas/inspiration-2.md"></section>
-					 <section data-markdown="slides/ideas/concept-1.md"></section>
-					 <section data-markdown="slides/ideas/concept-2.md"></section>
 				</section>
 				<section>
-						<section data-markdown="slides/vr/section.md"></section>
-						<section data-markdown="slides/vr/overview.md"></section>
-						<section data-markdown="slides/vr/state.md"></section>
-						<section data-markdown="slides/vr/similar.md"></section>
-						<section data-markdown="slides/vr/immersive.md"></section>
-						<section data-markdown="slides/vr/hardware.md"></section>
+						<section data-markdown="slides/focus/section.md"></section>
+						<section data-markdown="slides/focus/user.md"></section>
+						<section data-markdown="slides/focus/team.md"></section>
+						<section data-markdown="slides/focus/context.md"></section>
+						<section data-markdown="slides/focus/data.md"></section>
 				 </section>
 				 <section>
 						<section data-markdown="slides/prototypes/section.md"></section>
