Update background and prototypes

--- a/final/index.html
+++ b/final/index.html
@@ -36,14 +36,6 @@
 					<section data-markdown="slides/stakeholders/stakeholders.md"></section>
 				</section>
 				<section>
-					 <section data-markdown="slides/ideas/section.md"></section>
-					 <section data-markdown="slides/ideas/team.md"></section>
-					 <section data-markdown="slides/ideas/gamification.md"></section>
-					 <section data-markdown="slides/ideas/communication.md"></section>
-					 <section data-markdown="slides/ideas/inspiration.md"></section>
-					 <section data-markdown="slides/ideas/inspiration-2.md"></section>
-				</section>
-				<section>
 						<section data-markdown="slides/focus/section.md"></section>
 						<section data-markdown="slides/focus/user.md"></section>
 						<section data-markdown="slides/focus/team.md"></section>
@@ -51,14 +43,22 @@
 						<section data-markdown="slides/focus/data.md"></section>
 				 </section>
 				 <section>
+					<section data-markdown="slides/ideas/section.md"></section>
+					<section data-markdown="slides/ideas/team.md"></section>
+					<section data-markdown="slides/ideas/gamification.md"></section>
+					<section data-markdown="slides/ideas/communication.md"></section>
+					<section data-markdown="slides/ideas/inspiration.md"></section>
+					<section data-markdown="slides/ideas/inspiration-2.md"></section>
+			 	</section>
+				 <section>
 						<section data-markdown="slides/prototypes/section.md"></section>
-						<section data-markdown="slides/prototypes/github.md"></section>
 						<section data-markdown="slides/prototypes/hardware.md"></section>
 						<section data-markdown="slides/prototypes/webvr-1.md"></section>
 						<section data-markdown="slides/prototypes/webvr-2.md"></section>
-						<section data-markdown="slides/prototypes/meerwaarde.md"></section>
+						<section data-markdown="slides/prototypes/github.md"></section>
 						<section data-markdown="slides/prototypes/prototype-1.md"></section>
 						<section data-markdown="slides/prototypes/prototype-2.md"></section>
+						<section data-markdown="slides/prototypes/tech.md"></section>
 				 </section>
 				 <section>
 						<section data-markdown="slides/planning/section.md"></section>
