Add conclusion slides

--- a/final/index.html
+++ b/final/index.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<title>Afstudeerproject &samhoud</title>
+		<title>&samhoud</title>
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/samhoud.css">
 		<link rel="stylesheet" href="css/mono-blue.css">
@@ -64,7 +64,11 @@
 						<section data-markdown="slides/planning/section.md"></section>
 						<section data-markdown="slides/planning/iteration.md"></section>
 						<section data-markdown="slides/planning/vision.md"></section>
+						<section data-markdown="slides/planning/docs.md"></section>
+						<section data-markdown="slides/links.md"></section>
 				 </section>
+				 <section>
+					<section data-markdown="slides/fin.md"></section>
 			</div>
 		</div>
 		<script src="lib/js/head.min.js"></script>
